@@ -1,3 +1,4 @@
+from django import forms
 from django.contrib.auth.models import Permission
 from django.contrib.staticfiles.templatetags.staticfiles import static
 from django.core.urlresolvers import reverse
@@ -11,8 +12,9 @@ from wagtail.wagtailcore.permissions import collection_permission_policy
 
 
 class ExplorerMenuItem(MenuItem):
-    class Media:
-        js = [static('wagtailadmin/js/explorer-menu.js')]
+    @property
+    def media(self):
+        return forms.Media(js=[static('wagtailadmin/js/explorer-menu.js')])
 
 
 @hooks.register('register_admin_menu_item')
